--- a/src/engine/__environment__/css/style.css
+++ b/src/engine/__environment__/css/style.css
@@ -474,6 +474,54 @@ body {
   display: grid;
 }
 
+.big-reveal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+.big-reveal-toggle {
+  display: none;
+}
+.big-reveal-content {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+  overflow: hidden;
+}
+.big-reveal-toggle:not(:checked) + .big-reveal-content {
+  max-height: 0;
+  opacity: 0;
+}
+.big-reveal-toggle:checked + .big-reveal-content {
+  max-height: 1000vh;
+  opacity: 1;
+}
+.big-reveal-button {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  margin-top: 2em;
+}
+.big-reveal-toggle:not(:checked) ~ .big-reveal-button:not(.-once)::before {
+  content: attr(data-show) " ";
+}
+.big-reveal-toggle:checked ~ .big-reveal-button:not(.-once)::before {
+  content: attr(data-hide) " ";
+}
+.big-reveal-toggle:checked ~ .-once.big-reveal-button {
+  display: none;
+}
+
 /*** INSERT NEW TOKENS HERE ***/
 .slide-action .button, .feed-item-action, .card-button, .button.-error, .button.-caution, .button.-success, .button, .subnav-button, .nav-button {
   display: -webkit-inline-box;
@@ -1107,11 +1155,15 @@ body {
 }
 .-files.list {
   display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: auto;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 .-files.list .list-item {
   display: block;
+}
+.-files.list .link {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .intro-link, .accordion-toggles-toggle, .tile-utility-title, .tile-listing-action, .tile-listing.has-description .tile-listing-title, .tile-listing:not(.has-description) .tile-listing-title, .flyout-feed-item-link, .feed-item-title, .card-staff-name, .card-staff-contact-links-item a,
@@ -1705,6 +1757,8 @@ body {
 }
 .feature-image img {
   width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 @media (min-width: 601px) and (max-width: 900px) {
   .feature-image img {
@@ -3271,6 +3325,15 @@ body {
   margin: 0;
 }
 
+.breadcrumbs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
 /*** INSERT NEW MOLECULES HERE ***/
 .utility-list-title {
   display: -webkit-box;
@@ -3480,12 +3543,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-.section-main-breadcrumb::after {
-  content: "Breadcrumb";
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  margin-bottom: 2em;
 }
 .section-main-title {
   grid-column: main;
@@ -3531,43 +3594,43 @@ body {
   margin-bottom: 0;
 }
 @media (max-width: 600px) {
-  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page), .-info-page.section-main {
+  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page):not(.-gallery-page), .-info-page.section-main {
     grid-template-columns: [main-start] 1fr [main-end];
     grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end title-start] -webkit-min-content [title-end subtitle-start] -webkit-min-content [subtitle-end body-start] -webkit-min-content [body-end] repeat(100, [auto-start] -webkit-min-content [auto-end]) repeat(10, [section-start] -webkit-min-content [section-end]) [sidebar-start] -webkit-min-content [sidebar-end];
     grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end title-start] min-content [title-end subtitle-start] min-content [subtitle-end body-start] min-content [body-end] repeat(100, [auto-start] min-content [auto-end]) repeat(10, [section-start] min-content [section-end]) [sidebar-start] min-content [sidebar-end];
   }
 }
 @media (min-width: 601px) and (max-width: 900px) {
-  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page), .-info-page.section-main {
+  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page):not(.-gallery-page), .-info-page.section-main {
     grid-template-columns: [main-start] 1fr [main-end];
     grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end title-start] -webkit-min-content [title-end subtitle-start] -webkit-min-content [subtitle-end body-start] -webkit-min-content [body-end] repeat(100, [auto-start] -webkit-min-content [auto-end]) repeat(10, [section-start] -webkit-min-content [section-end]) [sidebar-start] -webkit-min-content [sidebar-end];
     grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end title-start] min-content [title-end subtitle-start] min-content [subtitle-end body-start] min-content [body-end] repeat(100, [auto-start] min-content [auto-end]) repeat(10, [section-start] min-content [section-end]) [sidebar-start] min-content [sidebar-end];
   }
 }
 @media (min-width: 901px) {
-  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page), .-info-page.section-main {
+  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page):not(.-gallery-page), .-info-page.section-main {
     grid-template-columns: [main-start] 1fr [main-end];
     grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end title-start] -webkit-min-content [title-end subtitle-start] -webkit-min-content [subtitle-end body-start] -webkit-min-content [body-end] repeat(100, [auto-start] -webkit-min-content [auto-end]) repeat(10, [section-start] -webkit-min-content [section-end]) [sidebar-start] -webkit-min-content [sidebar-end];
     grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end title-start] min-content [title-end subtitle-start] min-content [subtitle-end body-start] min-content [body-end] repeat(100, [auto-start] min-content [auto-end]) repeat(10, [section-start] min-content [section-end]) [sidebar-start] min-content [sidebar-end];
   }
 }
 @media (min-width: 901px) {
-  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page), .-info-page.section-main {
+  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page):not(.-gallery-page), .-info-page.section-main {
     grid-template-columns: [main-start] 1fr [main-end sidebar-start] 340px [sidebar-end];
     grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end main-start title-start] -webkit-min-content [title-end subtitle-start] -webkit-min-content [subtitle-end body-start] -webkit-min-content [body-end] repeat(100, [auto-start] -webkit-min-content [auto-end]) [main-end] repeat(10, [section-start] -webkit-min-content [section-end]);
     grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end main-start title-start] min-content [title-end subtitle-start] min-content [subtitle-end body-start] min-content [body-end] repeat(100, [auto-start] min-content [auto-end]) [main-end] repeat(10, [section-start] min-content [section-end]);
   }
 }
 @media (min-width: 901px) {
-  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page) .section-main-breadcrumb, .-info-page.section-main .section-main-breadcrumb {
+  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page):not(.-gallery-page) .section-main-breadcrumb, .-info-page.section-main .section-main-breadcrumb {
     grid-column: main/sidebar;
   }
-  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page) .section-main-title,
-.section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page) .section-main-subtitle, .-info-page.section-main .section-main-title,
+  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page):not(.-gallery-page) .section-main-title,
+.section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page):not(.-gallery-page) .section-main-subtitle, .-info-page.section-main .section-main-title,
 .-info-page.section-main .section-main-subtitle {
     grid-column: main/sidebar;
   }
-  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page) .section-main-sidebar, .-info-page.section-main .section-main-sidebar {
+  .section-main:not(.-info-page):not(.-material-page):not(.-tool-page):not(.-bio-page):not(.-research-help-page):not(.-service-directory-page):not(.-subject-librarian-directory-page):not(.-staff-directory-page):not(.-gallery-page) .section-main-sidebar, .-info-page.section-main .section-main-sidebar {
     grid-row: body/main;
   }
 }
@@ -3788,6 +3851,35 @@ body {
 .-staff-directory-page.without-intro.section-main .section-main-subtitle {
   display: none;
 }
+@media (max-width: 600px) {
+  .-gallery-page.section-main {
+    grid-template-columns: [main-start] 1fr [main-end];
+    grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end title-start] -webkit-min-content [title-end] repeat(100, [auto-start] -webkit-min-content [auto-end]);
+    grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end title-start] min-content [title-end] repeat(100, [auto-start] min-content [auto-end]);
+  }
+}
+@media (min-width: 601px) and (max-width: 900px) {
+  .-gallery-page.section-main {
+    grid-template-columns: [main-start] 1fr [main-end];
+    grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end title-start] -webkit-min-content [title-end] repeat(100, [auto-start] -webkit-min-content [auto-end]);
+    grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end title-start] min-content [title-end] repeat(100, [auto-start] min-content [auto-end]);
+  }
+}
+@media (min-width: 901px) {
+  .-gallery-page.section-main {
+    grid-template-columns: [main-start] 1fr [main-end];
+    grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end title-start] -webkit-min-content [title-end] repeat(100, [auto-start] -webkit-min-content [auto-end]);
+    grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end title-start] min-content [title-end] repeat(100, [auto-start] min-content [auto-end]);
+  }
+}
+.-gallery-page.section-main .section-main-subtitle,
+.-gallery-page.section-main .section-main-body,
+.-gallery-page.section-main .section-main-spacer,
+.-gallery-page.section-main .section-main-content,
+.-gallery-page.section-main .section-main-section,
+.-gallery-page.section-main .section-main-sidebar {
+  display: none;
+}
 
 .section-major {
   display: block;
@@ -3804,6 +3896,10 @@ body {
   position: absolute;
   margin: 0 auto;
 }
+.section-major-body {
+  padding-top: 2em;
+}
+
 .section-minor-title {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3855,6 +3951,49 @@ body {
   grid-column: 2/span 1;
   -ms-flex-item-align: center;
       align-self: center;
+}
+
+.flow-content-boxes {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: minmax(460px, -webkit-min-content);
+  grid-template-rows: minmax(460px, min-content);
+}
+.flow-content-boxes-feature {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+@media (min-width: 1200px) {
+  .flow-content-boxes-feature {
+    -webkit-box-ordinal-group: unset;
+        -ms-flex-order: unset;
+            order: unset;
+  }
+}
+.flow-content-boxes-explorer {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+@media (min-width: 1200px) {
+  .flow-content-boxes-explorer {
+    -webkit-box-ordinal-group: unset;
+        -ms-flex-order: unset;
+            order: unset;
+  }
+}
+@media (min-width: 1200px) {
+  .flow-content-boxes {
+    grid-template-columns: minmax(-webkit-min-content, 2fr) minmax(-webkit-min-content, 376px);
+    grid-template-columns: minmax(min-content, 2fr) minmax(min-content, 376px);
+  }
+  .flow-content-boxes-feature {
+    grid-column: 1;
+  }
+  .flow-content-boxes-explorer {
+    grid-column: 2;
+  }
 }
 
 /*** INSERT NEW ORGANISMS HERE ***/
@@ -3988,7 +4127,7 @@ body {
   grid-template-rows: 150px 1fr 420px;
   grid-template-columns: 1fr;
 }
-.service-directory-page-header {
+.service-directory-page-header, .gallery-page-header {
   grid-area: header;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4000,13 +4139,13 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
-.service-directory-page-header::after {
+.service-directory-page-header::after, .gallery-page-header::after {
   content: "Header";
 }
-.service-directory-page-main {
+.service-directory-page-main, .gallery-page-main {
   grid-area: main;
 }
-.service-directory-page-footer {
+.service-directory-page-footer, .gallery-page-footer {
   grid-area: footer;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4018,7 +4157,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
-.service-directory-page-footer::after {
+.service-directory-page-footer::after, .gallery-page-footer::after {
   content: "Footer";
 }
 
@@ -4186,6 +4325,13 @@ body {
   content: "Footer";
 }
 
+.gallery-page {
+  margin: 0 auto;
+  display: grid;
+  grid-template-areas: "header" "main" "footer";
+  grid-template-rows: 150px 1fr 420px;
+  grid-template-columns: 1fr;
+}
 /*** INSERT NEW TEMPLATES HERE ***/
 [v-cloak] {
   display: none;
@@ -5149,6 +5295,10 @@ button, input[type=button], input[type=submit], input[type=reset] {
   width: 100%;
 }
 
+.big-reveal-content {
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
 .text {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
@@ -8293,8 +8443,6 @@ button, input[type=button], input[type=submit], input[type=reset] {
   content: "," " ";
 }
 .list.-files {
-  --rows: 4;
-  grid-template-rows: repeat(var(--rows), auto);
   grid-gap: 10px;
 }
 
@@ -9615,6 +9763,17 @@ button, input[type=button], input[type=submit], input[type=reset] {
     font-size: 28px;
   }
 }
+.breadcrumbs li {
+  font-size: 0.8125em !important;
+  line-height: 1.4 !important;
+}
+.breadcrumbs li:not(:last-child)::after {
+  margin: 0 0.5em;
+  content: "›";
+  color: #5387F7;
+  font-weight: bold;
+}
+
 .card-action {
   padding: 25px;
   grid-gap: 25px;
@@ -13006,6 +13165,7 @@ button, input[type=button], input[type=submit], input[type=reset] {
   --cols-s: 1;
   --cols-m: 2;
   --cols-l: 3;
+  --cols-xl: 3;
 }
 @media (max-width: 600px) {
   .cards {
@@ -13021,6 +13181,16 @@ button, input[type=button], input[type=submit], input[type=reset] {
   .cards {
     grid-template-columns: repeat(var(--cols-l), 1fr);
   }
+}
+@media (min-width: 1200px) {
+  .cards {
+    grid-template-columns: repeat(var(--cols-xl), 1fr);
+  }
+}
+
+.grouping-files-heading {
+  color: #082B73 !important;
+  font-weight: normal !important;
 }
 
 .sidebar-list-section {
@@ -13282,6 +13452,7 @@ button, input[type=button], input[type=submit], input[type=reset] {
   --cols-s: 1;
   --cols-m: 2;
   --cols-l: 3;
+  --cols-xl: 3;
 }
 @media (max-width: 600px) {
   .tiles {
@@ -13298,7 +13469,21 @@ button, input[type=button], input[type=submit], input[type=reset] {
     grid-template-columns: repeat(var(--cols-l), 1fr);
   }
 }
+@media (min-width: 1200px) {
+  .tiles {
+    grid-template-columns: repeat(var(--cols-xl), 1fr);
+  }
+}
 
+.flow-content-boxes {
+  grid-row-gap: 23px;
+}
+@media (min-width: 1200px) {
+  .flow-content-boxes {
+    grid-column-gap: 36px;
+    grid-row-gap: 0;
+  }
+}
 .intro-hero-gradient {
   background-image: -webkit-gradient(linear, left bottom, left top, color-stop(-14.42%, #282828), color-stop(50%, rgba(40, 40, 40, 0)));
   background-image: linear-gradient(0deg, #282828 -14.42%, rgba(40, 40, 40, 0) 50%);
@@ -13497,7 +13682,7 @@ button, input[type=button], input[type=submit], input[type=reset] {
   grid-column-gap: 40px;
 }
 .section-main-breadcrumb {
-  border: 1px solid #B6BDCC;
+  min-height: 40px;
 }
 .section-main-body .heading.-h2 {
   font-family: "Open Sans", sans-serif;
@@ -13761,6 +13946,12 @@ button, input[type=button], input[type=submit], input[type=reset] {
   color: #FFFFFF;
 }
 
+.gallery-page {
+  grid-gap: 20px;
+}
+.gallery-page-header, .gallery-page-footer {
+  border: 1px solid #B6BDCC;
+}
 .info-page {
   grid-gap: 20px;
 }
