--- a/src/patterns/__environment__/30-molecules/tile~listing.hbs
+++ b/src/patterns/__environment__/30-molecules/tile~listing.hbs
@@ -3,7 +3,7 @@
   <div class="tile-listing-image{{#if image.align.x}} -align-x-{{image.align.x}}{{/if}}{{#if image.align.y}} -align-y-{{image.align.y}}{{/if}}{{#if image.fit}} -{{image.fit}}{{/if}}">
     {{#with image}}{{> atoms-image decorative=true}}{{/with}}
   </div>
-  <span class="tile-listing-date">{{this.date}}</span>
+  <span class="tile-listing-date">{{default this.date.display this.date}}</span>
   {{#with link}}{{> atoms-link label=../title classes='tile-listing-title'}}{{/with}}
   {{#if description}}<p class="tile-listing-description">{{ellipsis (sanitize description) 150}}</p>{{/if}}
   {{#if link.label}}{{#with link}}{{> atoms-link classes='tile-listing-action'}}{{/with}}{{/if}}
