--- a/src/patterns/__environment__/60-templates/gallery.hbs
+++ b/src/patterns/__environment__/60-templates/gallery.hbs
@@ -1,16 +1,160 @@
-{{! Modify current exhibitions to adhere to the proper format. }}
+{{! Initialize current and past groups. }}
+{{assign 'current' (arrayify null)}}
+{{assign 'past' (arrayify null)}}
+
+{{! Group exhibits by date as either current or past. }}
+{{#each exhibits}}
+
+  {{! Format the start date for display. }}
+  {{#if date.start.date}}
+    {{#if date.start.month}}
+      {{assign 'date.start.display' (moment date.start.date 'MMMM YYYY')}}
+    {{else}}
+      {{assign 'date.start.display' (moment date.start.date 'MMMM D, YYYY')}}
+    {{/if}}
+  {{else}}
+    {{assign 'date.start.display' null}}
+  {{/if}}
+
+  {{! Format the end date for display. }}
+  {{#if date.end.date}}
+    {{#if date.end.month}}
+      {{assign 'date.end.display' (moment date.end.date 'MMMM YYYY')}}
+    {{else}}
+      {{assign 'date.end.display' (moment date.end.date 'MMMM D, YYYY')}}
+    {{/if}}
+  {{else}}
+    {{assign 'date.end.display' null}}
+  {{/if}}
+
+  {{! Format the date range for display. }}
+  {{#if (and date.start.date date.end.date)}}
+    {{#if (momentIsSame date.start.date date.end.date)}}
+      {{assign 'date.display' date.start.date}}
+    {{else}}
+      {{assign 'date.display' (combine date.start.display ' - ' date.end.display)}}
+    {{/if}}
+  {{else if date.start.date}}
+    {{#if (momentIsAfterToday date.start.date)}}
+      {{assign 'date.display' (combine 'Opens ' date.start.display)}}
+    {{else}}
+      {{assign 'date.display' (combine 'Since ' date.start.display)}}
+    {{/if}}
+  {{else if date.end.date}}
+    {{assign 'date.display' (combine 'Through ' date.end.display)}}
+  {{/if}}
+
+  {{! Start categorizing exhibits based on their start date. }}
+  {{#if date.start.date}}
+
+    {{! Handle dates where month only should be used. }}
+    {{#if date.start.month}}
+
+      {{! A current exhibit should have a start date of either today or before. }}
+      {{#if (momentIsSameOrBeforeToday date.start.date 'month')}}
+
+        {{! It should also have an end date of either today or after or no end date at all. }}
+        {{#if (or (momentIsSameOrAfterToday date.end.date 'month') (not date.end.date))}}
+
+          {{storagePush 'current' this}}
+
+        {{! Otherwise, assume the date is in the past. }}
+        {{else}}
+
+          {{storagePush 'past' this}}
+
+        {{/if}}
+
+      {{! Otherwise, assume the exhibit is in the past. }}
+      {{else}}
+
+        {{storagePush 'past' this}}
+
+      {{/if}}
+
+    {{! Otherwise, handle dates where the full date should be used. }}
+    {{else}}
+
+      {{! A current exhibit should have a start date of either today or before. }}
+      {{#if (momentIsSameOrBeforeToday date.start.date)}}
+
+        {{! It should also have an end date of either today or after or no end date at all. }}
+        {{#if (or (momentIsSameOrAfterToday date.end.date) (not date.end.date))}}
+
+          {{storagePush 'current' this}}
+
+        {{! Otherwise, assume the date is in the past. }}
+        {{else}}
+
+          {{storagePush 'past' this}}
+
+        {{/if}}
+
+      {{! Otherwise, assume the exhibit is in the past. }}
+      {{else}}
+
+        {{storagePush 'past' this}}
+
+      {{/if}}
+
+    {{/if}}
+
+  {{! Otherwise, categorize exhibits without a start date. }}
+  {{else if date.end.date}}
+
+    {{! Handle dates where month only should be used. }}
+    {{#if date.end.month}}
+
+      {{! A current exhibit should have an end date of either today or after. }}
+      {{#if (momentIsSameOrAfterToday date.end.date 'month')}}
+
+        {{storagePush 'current' this}}
+
+      {{! Otherwise, assume the date is in the past. }}
+      {{else}}
+
+        {{storagePush 'past' this}}
+
+      {{/if}}
+
+    {{! Otherwise, handle dates where the full date should be used. }}
+    {{else}}
+
+      {{! A current exhibit should have an end date of either today or after. }}
+      {{#if (momentIsSameOrAfterToday date.end.date)}}
+
+        {{storagePush 'current' this}}
+
+      {{! Otherwise, assume the date is in the past. }}
+      {{else}}
+
+        {{storagePush 'past' this}}
+
+      {{/if}}
+
+    {{/if}}
+
+  {{/if}}
+
+{{/each}}
+
+{{! Capture current and past exhibits. }}
+{{assign 'current' (storageGet 'current')}}
+{{assign 'past' (storageGet 'past')}}
+
+{{! Modify current exhibits to adhere to the proper format. }}
 {{#each current}}
 
-  {{! Make sure all current exhibition cards have a dark theme and vertical layout. }}
+  {{! Make sure all current exhibits cards have a dark theme and vertical layout. }}
   {{assign 'theme' 'dark'}}
   {{assign 'vertical' true}}
 
-  {{! Save the updated exhibition data. }}
+  {{! Save the updated exhibit data. }}
   {{storagePush 'current' this}}
 
 {{/each}}
 
-{{! Save exhibitions. }}
+{{! Save exhibits. }}
 {{assign 'current' (storageGet 'current')}}
 
 {{! Set a limit on the number of past exhibitions that should be displayed if not given.}}
@@ -32,12 +176,12 @@
     {{#extend 'organisms-major' theme='light' heading='Past Exhibitions'}}
       {{#content 'section-major-body'}}
 
-        {{> compounds-tiles columns=(objectify m=2 l=2 xl=3) tile-type='listing' tiles=(before past limit)}}
+        {{> compounds-tiles columns=(objectify m=2 l=2 xl=3) tile-type='listing' tiles=(limit past this.limit)}}
 
-        {{#if (gt (length (after past (minus limit 1))) 0)}}
+        {{#if (gt (length (limitDifference past this.limit)) 0)}}
           {{#extend 'tokens-reveal' once=true label='View All Past Exhibitions'}}
             {{#content 'big-reveal-content'}}
-              {{> compounds-tiles columns=(objectify m=2 l=2 xl=3) tile-type='listing' tiles=(after past (minus limit 1))}}
+              {{> compounds-tiles columns=(objectify m=2 l=2 xl=3) tile-type='listing' tiles=(limitDifference past this.limit)}}
             {{/content}}
           {{/extend}}
         {{/if}}
